Fix shifted tab names

--- a/src/HeaderTab/styles.scss
+++ b/src/HeaderTab/styles.scss
@@ -11,5 +11,9 @@
 
   &_title {
     @extend %subtitle-1;
+
+    pre {
+      margin: 0;
+    }
   }
 }
